| Summary: | ASTERISK-30190: res_geolocation: GEOLOC_PROFILE isn't returning correct values on incoming channel | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2022-08-24 08:50:24 | Date Closed: | 2022-09-10 12:53:39 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_geolocation |
| Versions: | 16.28.0 18.14.0 19.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | See...
[I think there may be a bug in 18.14.0 \$\{GEOLOC_PROFILE(profile_precedence)\}, seems to always return prefer_incoming|http://lists.digium.com/pipermail/asterisk-users/2022-August/296626.html] from Dan Cropp on the asterisk-users mailing list. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-09-10 12:53:40.118-0500 Change 19193 merged by Friendly Automation: res_geolocation: Add two new options to GEOLOC_PROFILE [https://gerrit.asterisk.org/c/asterisk/+/19193|https://gerrit.asterisk.org/c/asterisk/+/19193] By: Friendly Automation (friendly-automation) 2022-09-10 12:53:48.132-0500 Change 19198 merged by Friendly Automation: res_geolocation: Add two new options to GEOLOC_PROFILE [https://gerrit.asterisk.org/c/asterisk/+/19198|https://gerrit.asterisk.org/c/asterisk/+/19198] By: Friendly Automation (friendly-automation) 2022-09-10 12:54:00.995-0500 Change 19185 merged by Friendly Automation: res_geolocation: Add two new options to GEOLOC_PROFILE [https://gerrit.asterisk.org/c/asterisk/+/19185|https://gerrit.asterisk.org/c/asterisk/+/19185] By: Friendly Automation (friendly-automation) 2022-09-10 12:54:21.817-0500 Change 18989 merged by Friendly Automation: res_geolocation: Add two new options to GEOLOC_PROFILE [https://gerrit.asterisk.org/c/asterisk/+/18989|https://gerrit.asterisk.org/c/asterisk/+/18989] By: Friendly Automation (friendly-automation) 2022-09-10 12:54:35.680-0500 Change 19189 merged by Friendly Automation: res_geolocation: Add two new options to GEOLOC_PROFILE [https://gerrit.asterisk.org/c/asterisk/+/19189|https://gerrit.asterisk.org/c/asterisk/+/19189] By: Friendly Automation (friendly-automation) 2022-09-10 12:54:50.875-0500 Change 19181 merged by Friendly Automation: res_geolocation: Add two new options to GEOLOC_PROFILE [https://gerrit.asterisk.org/c/asterisk/+/19181|https://gerrit.asterisk.org/c/asterisk/+/19181] | ||